优化拦截地址逻辑，方便转发整体拦截